# GRASP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/instructions/: astrophysics.instructions.md
.github/workflows/: python-test.yaml
__init_scripts__/: initGrasp.py
docs/source/: conf.py  ggcas._utility.rst  ggcas.analyzers.rst  ggcas.formulary.rst  ggcas.stats.rst  grasp._utility.rst  grasp.analyzers.rst  grasp.formulary.rst  grasp.functions.rst  grasp.gaia.rst  grasp.plots.rst  grasp.rst  grasp.stats.rst  grasp.utils.rst  index.rst  modules.rst
grasp/: __init__.py  __version__.py  formulary.py  functions.py  plots.py  stats.py  types.py
grasp/_utility/: base_classes.py  base_formula.py  cluster.py  sample.py  sample_old.py  sample_qtable.py
grasp/analyzers/: __init__.py  _glpoints.py  calculus.py  dynamics.py  king.py  mcluster.py
grasp/analyzers/_Rcode/: __init__.py  gaussian_mixture.R  r2py_models.py  r_check.py  regression.R
grasp/analyzers/_king/: king_integrator
grasp/analyzers/_king/ObjectCode/: king.f90
grasp/analyzers/backends/: __init__.py  _python.py
grasp/core/: folder_paths.py  osutils.py
grasp/deep_learning/: COMPLETE_GUIDE.md  IMPLEMENTATION_SUMMARY.py  README.md  __init__.py  advanced.py  clustering.py  models.py  utils.py
grasp/gaia/: __init__.py  _zero_point.py  query.py  query2.py
grasp/sysdata/: _Catalogue.xlsx  base.frm
grasp/utils/: __init__.py  rng.py
init_scripts/: initGrasp.py
scripts/: analysis.py  n104_analysis.ipynb  n4372_analysis.ipynb  n6121_analysis.html  n6121_analysis.ipynb  n6366_analysis.ipynb  n6544_analysis.ipynb  n6656_analysis.ipynb
test/: test_cluster.py  test_formulary.py  test_functions.py  test_plots.py  test_python_backends.py  test_query.py  test_rng.py  test_sample.py  test_stats_poisson.py
test/analyzers/: test_calculus.py  test_king.py
test/utility/: test_osutils.py
