[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grasp"
description = "Software to gather and analyse astrometric and photometric data, mainly retrieved from the Gaia archive, with a focus on globular clusters."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Pietro Ferraiuolo", email = "pietro.ferraiuolo@inaf.it" },
]
maintainers = [
    { name = "Pietro Ferraiuolo", email = "pietro.ferraiuolo@inaf.it" },
]
keywords = [
    "astronomy",
    "astrophysics",
    "gaia",
    "globular-clusters",
    "kinematics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version"]
dependencies = [
    "astropy>=7.0.0",
    "scikit-learn",
    "scipy",
    "numpy",
    "sympy",
    "pandas",
    "astroML==1.0.2.post1",
    "seaborn",
    "matplotlib",
    "astroquery==0.4.7",
    "gaiadr3-zeropoint",
    "nsstools",
    "antlr4-python3-runtime==4.11",
    "tabulate",
    "tqdm",
    "openpyxl",
    "lmfit>=1.3",
    "statsmodels",
    "joblib",
]

[project.optional-dependencies]
r = ["rpy2>=3.5,<4"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.6",
    "black>=24",
    "mypy>=1.10",
    "pre-commit",
]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme",
    "numpydoc",
]

[project.urls]
Homepage = "https://github.com/pietroferraiuolo/GRASP"
Source = "https://github.com/pietroferraiuolo/GRASP"
Issues = "https://github.com/pietroferraiuolo/GRASP/issues"

[project.scripts]
graspy = "init_scripts.initGrasp:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["grasp*"]

[tool.setuptools.package-data]
grasp = [
    "py.typed",
    "sysdata/_Catalogue.xlsx",
    "sysdata/base.frm",
    "analyzers/_Rcode/*.R",
]

[tool.setuptools.dynamic]
version = { attr = "grasp.__version__.__version__" }

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "build",
    "grasp.egg-info",
    "grasp/analyzers/_king",
    "grasp/analyzers/_mcluster",
    "docs",
    "init_scripts",
    "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# Real warts we have not finished untangling yet (mostly auto-generated from
# the historical R wrappers / Sphinx-driven docstrings):
ignore = [
    "E501",  # Long lines: tolerated for now, will be tightened later.
    "E741",  # Ambiguous variable names ``l``/``I`` survive in legacy code.
    "B008",  # Allow ``functools.partial`` / ``Quantity`` as default args.
    "UP007", # Allow ``Union[...]`` style — used through ``typing.TypeAlias``.
    "UP045", # Allow ``Optional[X]`` style for the same reason.
    "B904",  # ``raise ... from`` rewrites deferred — many R wrappers re-raise.
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["E402", "F401", "F403", "F841", "SIM117"]
"grasp/_utility/__init__.py" = ["F401"]
"grasp/core/__init__.py" = ["F401"]
"grasp/__init__.py" = ["F401", "E402"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = false
follow_imports = "silent"
disable_error_code = ["import-untyped", "import-not-found"]
exclude = [
    "build",
    "docs",
    "grasp\\.egg-info",
    "grasp/analyzers/_king",
    "grasp/analyzers/_mcluster",
    "init_scripts",
    "scripts",
]

[[tool.mypy.overrides]]
module = ["rpy2.*", "astroML.*", "astroquery.*", "gaiadr3_zeropoint.*", "nsstools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["-ra", "--strict-markers"]
filterwarnings = [
    # Quiet the noisy R wrappers that we are migrating off in Phase 3.
    "ignore::DeprecationWarning:grasp.*",
]
